# test_sdk-0.20.1

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  andes.sh  build-wasm.sh  clean-wasm.sh  remove-outputs.sh  test-andes.sh  testdenali-fmt.sh  zip-example-wasm.sh
contracts/examples/adder/wasm/: Cargo.toml
contracts/examples/bonding-curve-contract/: Cargo.toml
contracts/examples/bonding-curve-contract/abi/: Cargo.toml
contracts/examples/bonding-curve-contract/src/: lib.rs
contracts/examples/bonding-curve-contract/wasm/: Cargo.toml
contracts/examples/crypto-bubbles/abi/: Cargo.toml
contracts/examples/erc1155/: Cargo.toml
contracts/examples/erc1155-marketplace/abi/: Cargo.toml
contracts/examples/erc1155-user-mock/abi/: Cargo.toml
contracts/examples/erc1155/abi/: Cargo.toml
contracts/examples/erc1155/src/: erc1155.rs  erc1155_user_proxy.rs
contracts/examples/erc1155/tests/: erc1155_testdenali_go_test.rs  erc1155_testdenali_rs_test.rs
contracts/examples/erc1155/wasm/: Cargo.toml
contracts/examples/erc721/abi/: Cargo.toml
contracts/examples/lottery-dcdt/abi/: Cargo.toml
contracts/examples/lottery-dcdt/wasm/: Cargo.toml
contracts/examples/lottery-erc20/wasm/: Cargo.toml
contracts/examples/multisig/abi/: Cargo.toml
contracts/examples/nft-minter/abi/: Cargo.toml
contracts/examples/nft-storage-prepay/: Cargo.toml
contracts/examples/nft-storage-prepay/abi/: Cargo.toml
contracts/examples/nft-storage-prepay/src/: nft_storage_prepay.rs
contracts/examples/nft-storage-prepay/wasm/: Cargo.toml
contracts/examples/ping-pong-rewa/: Cargo.toml
contracts/examples/ping-pong-rewa/abi/: Cargo.toml
contracts/examples/ping-pong-rewa/interaction/: Ping-pong-rewa.moajs.md  snippets.sh
contracts/examples/ping-pong-rewa/src/: ping_pong.rs  user_status.rs
contracts/examples/ping-pong-rewa/tests/: ping_pong_rewa_testdenali_go_test.rs  ping_pong_rewa_testdenali_rs_test.rs
contracts/examples/ping-pong-rewa/wasm/: Cargo.toml
contracts/examples/rewa-dcdt-swap/: Cargo.toml
contracts/examples/rewa-dcdt-swap/abi/: Cargo.toml
contracts/examples/rewa-dcdt-swap/src/: swap.rs
contracts/examples/rewa-dcdt-swap/tests/: rewa_dcdt_swap_testdenali_go_test.rs  rewa_dcdt_swap_testdenali_rs_test.rs
contracts/feature-tests/basic-features/: Cargo.toml
contracts/feature-tests/composability/: Cargo.toml
contracts/feature-tests/use-module/: Cargo.toml  use_module_expected.abi.json
contracts/modules/testnumbat-wasm-module-bonding-curve/: Cargo.toml
contracts/modules/testnumbat-wasm-module-governance/: Cargo.toml  README.md
contracts/modules/testnumbat-wasm-module-users/: Cargo.toml  README.md
testdenali/: Cargo.toml  README.md
testdenali/tests/: interpreter_test.rs  serde_test.rs
testnumbat-codec/: Cargo.toml  README.md
testnumbat-codec-derive/: Cargo.toml  README.md
testnumbat-codec-derive/src/: nested_de_derive.rs  nested_en_derive.rs  top_de_derive.rs  top_en_derive.rs
testnumbat-codec/src/: lib.rs  nested_de.rs
testnumbat-codec/tests/: derive_empty_struct_test.rs  derive_enum_or_default_test.rs  derive_enum_test.rs  derive_enum_tricky_defaults_fieldless_test.rs  derive_enum_tricky_defaults_test.rs  derive_hygiene.rs  derive_struct_or_default_generic_test.rs  derive_struct_or_default_test.rs  derive_struct_test.rs  derive_struct_with_generic_test.rs  derive_tuple_struct_test.rs  explicit_impl_enum.rs  explicit_impl_struct.rs  explicit_impl_wrapped_array.rs
testnumbat-wasm/: Cargo.toml  README.md
testnumbat-wasm-debug/: Cargo.toml  README.md
testnumbat-wasm-debug/src/: andes_testdenali_runner.rs  async_data.rs  blockchain_mock.rs  builtin_func_exec.rs  contract_map.rs  display_util.rs  execute_testdenali.rs  lib.rs  managed_test_util.rs  tx_context.rs  tx_input.rs  tx_log.rs  tx_managed_types.rs  tx_output.rs
testnumbat-wasm-debug/src/abi_json/: build_info_abi_json.rs  contract_abi_json.rs  endpoint_abi_json.rs  mod.rs  type_abi_json.rs
testnumbat-wasm-debug/src/api/: blockchain_api_mock.rs  call_value_api_mock.rs  crypto_api_mock.rs  endpoint_arg_api_mock.rs  endpoint_finish_api_mock.rs  error_api_mock.rs  log_api_mock.rs  send_api_mock.rs  storage_api_mock.rs  vm_api_mock.rs
testnumbat-wasm-debug/src/testdenali_step/: check_state.rs  execute_helper_functions.rs  sc_call.rs  sc_deploy.rs  sc_query.rs  set_state.rs  transfer.rs
testnumbat-wasm-debug/tests/: framework_testdenali_test.rs  hex_call_data_arg_load.rs  managed_codec_test.rs  managed_token_identifier_test.rs  sample_adder.rs  test_hash_map_mapper.rs  test_hash_map_storage_mapper.rs  test_hash_set_mapper.rs  test_linked_list_mapper.rs  test_queue_mapper.rs
testnumbat-wasm-debug/tests/testdenali/: validatorReward.scen.json
testnumbat-wasm-derive/: Cargo.toml  README.md
testnumbat-wasm-derive/src/: contract_impl.rs  macro_proxy.rs  type_abi_derive.rs
testnumbat-wasm-derive/src/generate/: abi_gen.rs  arg_regular.rs  auto_impl_event.rs  auto_impl_storage.rs  callback_gen.rs  callback_proxies_gen.rs  method_call_gen.rs  payable_gen.rs  proxy_gen.rs  snippets.rs  supertrait_gen.rs
testnumbat-wasm-derive/src/preprocessing/: substitution_list.rs
testnumbat-wasm-node/: Cargo.toml  README.md
testnumbat-wasm-node/src/api/: blockchain_api_node.rs  call_value_api_node.rs  crypto_api_node.rs  endpoint_arg_api_node.rs  endpoint_finish_api_node.rs  error_api_node.rs  log_api_node.rs  send_api_node_legacy.rs  send_api_node_managed.rs  storage_api_node.rs  vm_api_node.rs
testnumbat-wasm-output/: Cargo.toml  README.md
testnumbat-wasm-output/src/: lib.rs
testnumbat-wasm-serde/: Cargo.toml  README.md
testnumbat-wasm/src/: lib.rs  log_util.rs  macros.rs
testnumbat-wasm/src/abi/: build_info_abi.rs
testnumbat-wasm/src/dcdt/: system_sc_proxy.rs
testnumbat-wasm/src/hex_call_data/: cd_de.rs  cd_ser.rs
testnumbat-wasm/src/io/: arg_de_input.rs  contract_call_arg.rs  dyn_arg.rs  dyn_arg_input.rs  dyn_arg_output.rs  finish.rs  macro_helpers.rs  signal_error.rs
testnumbat-wasm/src/storage/: protected_keys.rs  storage_get.rs  storage_key.rs  storage_set.rs
(+422 files in other folders)
