[package]
name = "testdenali"
version = "0.0.2"
edition = "2018"

authors = ["Test Author", "Test Author"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Saisumanthv/test_sdk-0.20.1"
homepage = "https://testnumbat.com/"
documentation = "https://docs.testnumbat.com/"
description = "Parser/writer of the Testdenali test format"
keywords = ["testnumbat", "blockchain", "contract"]
categories = ["cryptography::cryptocurrencies", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"
sha3 = "0.9.1"
