[package]
name = "testnumbat-codec"
version = "0.0.2"
edition = "2018"

authors = ["Test Author", "Test Author"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Saisumanthv/test_sdk-0.20.1"
homepage = "https://testnumbat.com/"
documentation = "https://docs.testnumbat.com/"
description = "Lightweight binary serializer/deserializer, written especially for Testnumbat smart contracts"
keywords = ["testnumbat", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools"]

[features]
derive = ["testnumbat-codec-derive"]

[dependencies.testnumbat-codec-derive]
path = "../testnumbat-codec-derive"
version = "=0.0.2"
optional = true

[dependencies]
wee_alloc = "0.4"
arrayvec = { version = "0.7.1", default-features = false }

[dev-dependencies.testnumbat-codec-derive]
path = "../testnumbat-codec-derive"
version = "=0.0.2"
