[package]
name = "testnumbat-wasm-debug"
version = "0.0.2"
edition = "2018"

authors = ["Test Author", "Test Author"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Saisumanthv/test_sdk-0.20.1"
homepage = "https://testnumbat.com/"
documentation = "https://docs.testnumbat.com/"
description = "Testnumbat WebAssembly smart contract API debugging mocks and utils"
keywords = ["testnumbat", "blockchain", "contract", "debug"]
categories = ["cryptography::cryptocurrencies", "development-tools::debugging"]

[dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
sha2 = "0.9.2"
sha3 = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustc_version = "0.4"

[features]
andes-tests = []

[dependencies.testnumbat-wasm]
version = "0.0.2"
path = "../testnumbat-wasm"
features = ["derive"]

[dependencies.testdenali]
version = "0.0.2"
path = "../testdenali"
