[package]
name = "testnumbat-wasm-serde"
version = "0.0.1"
edition = "2018"

authors = ["Test Author", "Test Author"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Saisumanthv/test_sdk-0.20.1"
homepage = "https://testnumbat.com/"
documentation = "https://docs.testnumbat.com/"
description = "Testnumbat WebAssembly Serde serializer"
keywords = ["testnumbat", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools::ffi"]

[dependencies]
wee_alloc = "0.4"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }

[workspace]
members = ["."]
