[package]
name = "testnumbat-wasm"
version = "0.0.2"
edition = "2018"

authors = ["Test Author", "Test Author"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Saisumanthv/test_sdk-0.20.1"
homepage = "https://testnumbat.com/"
documentation = "https://docs.testnumbat.com/"
description = "Testnumbat WebAssembly smart contract API"
keywords = ["testnumbat", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools"]

[features]
derive = ["testnumbat-wasm-derive"]
cb_closure_managed_deser = []

[dependencies]
wee_alloc = "0.4"
arrayvec = { version = "0.7.1", default-features = false }
hashbrown = "0.11.2"
hex-literal = "0.3.1"

[dependencies.testnumbat-wasm-derive]
version = "=0.0.2"
path = "../testnumbat-wasm-derive"
optional = true

[dependencies.testnumbat-codec]
version = "0.0.2"
path = "../testnumbat-codec"
features = ["derive"]
