[package]
name = "bonding-curve-contract"
version = "0.0.0"
authors = ["Test Author"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = [
    "testnumbat-wasm-node",
    "testnumbat-wasm-module-bonding-curve/wasm-output-mode"
]

[dependencies.testnumbat-wasm-module-bonding-curve]
version = "0.0.2"
path = "../../modules/testnumbat-wasm-module-bonding-curve"

[dependencies.testnumbat-wasm]
version = "0.0.2"
path = "../../../testnumbat-wasm"
features = ["derive"]

[dependencies.testnumbat-wasm-node]
version = "0.0.2"
path = "../../../testnumbat-wasm-node"
optional = true

[dev-dependencies.testnumbat-wasm-debug]
version = "0.0.2"
path = "../../../testnumbat-wasm-debug"

