[package]
name = "erc1155"
version = "0.0.0"
authors = ["Test Author"]
edition = "2018"
publish = false

[lib]
path = "src/erc1155.rs"

[features]
wasm-output-mode = ["testnumbat-wasm-node"]

[dependencies.erc1155-user-mock]
path="../erc1155-user-mock"

[dependencies.testnumbat-wasm]
version = "0.0.2"
path = "../../../testnumbat-wasm"
features = ["derive"]

[dependencies.testnumbat-wasm-node]
version = "0.0.2"
path = "../../../testnumbat-wasm-node"
optional = true

[dev-dependencies.testnumbat-wasm-debug]
version = "0.0.2"
path = "../../../testnumbat-wasm-debug"
