[package]
name = "rewa-dcdt-swap"
version = "0.0.0"
edition = "2018"
publish = false

[lib]
path = "src/swap.rs"

[features]
wasm-output-mode = [ "testnumbat-wasm-node",]

[dependencies.testnumbat-wasm]
version = "0.0.2"
path = "../../../testnumbat-wasm"
features = ["derive"]

[dependencies.testnumbat-wasm-node]
version = "0.0.2"
path = "../../../testnumbat-wasm-node"
optional = true

[dev-dependencies.testnumbat-wasm-debug]
version = "0.0.2"
path = "../../../testnumbat-wasm-debug"
