[package]
name = "async"
version = "0.0.0"
authors = ["Test Author"]
edition = "2018"
publish = false

[dependencies.forwarder]
path = "forwarder"

[dependencies.forwarder-raw]
path = "forwarder-raw"

[dependencies.proxy-test-first]
path = "proxy-test-first"

[dependencies.proxy-test-second]
path = "proxy-test-second"

[dependencies.vault]
path = "vault"

[dependencies.testnumbat-wasm]
version = "0.0.2"
path = "../../../testnumbat-wasm"
features = ["derive"]

[dependencies.testnumbat-wasm-node]
version = "0.0.2"
path = "../../../testnumbat-wasm-node"
optional = true

[dev-dependencies.testnumbat-wasm-debug]
version = "0.0.2"
path = "../../../testnumbat-wasm-debug"
