[package]
name = "testnumbat-wasm-module-bonding-curve"
version = "0.0.2"
edition = "2018"

authors = ["Test Author", "Test Author"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Saisumanthv/test_sdk-0.0.2"
homepage = "https://testnumbat.com/"
documentation = "https://docs.testnumbat.com/"
description = "Testnumbat Webassembly smart contract module that allows an address to sell tokens through a contract by defining a bonding curve that controls the evolution of the price"
keywords = ["testnumbat", "wasm", "bonding-curve", "blockchain", "contract"]
categories = ["no-std", "wasm"]

[features]
wasm-output-mode = ["testnumbat-wasm-node"]

[dependencies.testnumbat-wasm]
version = "0.0.2"
path = "../../../testnumbat-wasm"
features = ["derive"]

[dependencies.testnumbat-wasm-node]
version = "0.0.2"
path = "../../../testnumbat-wasm-node"
optional = true

[dev-dependencies.testnumbat-wasm-debug]
version = "0.0.2"
path = "../../../testnumbat-wasm-debug"
