[package]
name = "adder-wasm"
version = "0.0.0"
authors = ["Test Author"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.adder]
path = ".."
features = ["wasm-output-mode"]
default-features = false

[dependencies.testnumbat-wasm-output]
version = "0.0.2"
path = "../../../../testnumbat-wasm-output"
features = ["wasm-output-mode"]

[workspace]
members = ["."]
