[package]
name = "multisig-abi"
version = "0.0.0"
authors = ["Test Author"]
edition = "2018"
publish = false

[dependencies.multisig]
path = ".."

[dependencies.testnumbat-wasm]
version = "0.0.2"
path = "../../../../testnumbat-wasm"

[dependencies.testnumbat-wasm-debug]
version = "0.0.2"
path = "../../../../testnumbat-wasm-debug"
